Improving installation steps & docs (#12)
* local change for installation

* For linux LIBRARY_PATH is looked up at compile time and LD_LIBRARY_TIME
at runtime

* reworked structure & added nimble task for installation

* Fixed import path after restructuration

* fix generated file

* fix devops path

* fix generated linker flags

* fixed path in libtorch

* fix eol

* LLinker flags were already in src/flambeau/libtorch

* little quality of life in tests folder

* rm useless devops folder

* cleanup

* README udpate

* rm comment about LD_LIBRARY_PATH

* format readme

* rm useless times import now'

* src is bad idea due to nimble limitation. vendor needs to be top level for scan + sumodule issue

* restore submodule

* import flambeau_nn missing

* moved vendor/lib => vendo/

* sanitized how explicit path are constructuded

* libtorch download in vendor

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-build/*
-vendor/libtorch
-vendor/lib
 *.zip
-nimcache/*
 *.pt
+build/*
+nimcache/*
+vendor/*
+install/libtorch
+install/torch_installer
