--- a/tests/.gitignore
+++ b/tests/.gitignore
@@ -1,10 +1,10 @@
-build/
-raw/test_aggregate
-raw/test_rawtensor
-raw/test_noinitensor
-tensor/test_tensor
-tensor/test_aggregate
-tensor/test_accessors
-tensor/test_dummy
+bin/
+*/test_aggregate
+*/test_rawtensor
+*/test_noinitensor
+*/test_accessors_slicer
+*/test_tensor
+*/test_accessors
+*/test_nn
 nimcache
 testresults
