--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,11 +10,10 @@ jobs:
   tests:
     strategy:
       matrix:
-        # os: [ubuntu-latest]
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
+        # os: [ubuntu-latest, windows-latest]
 
     runs-on: ${{ matrix.os }}
-    # runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: "install_nim"
