--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,9 @@ jobs:
       - uses: actions/checkout@v2
       - name: "install_nim"
         id: install_nim
-        uses: iffy/install-nim@v3.2.2
+        uses: iffy/install-nim@v4
+        with:
+          version: devel
       - run: git submodule update --recursive --init
       - run: nimble install -y
       - run: nimble test
