--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,8 @@ jobs:
         id: install_nim
         uses: iffy/install-nim@v4
         with:
-          version: 1.6.12
-      - run: choosenim update "#version-2-0"
+          version: "#version-2-0"
+      # - run: choosenim update -n "#version-2-0"
       - run: git submodule update --recursive --init
       - run: nimble install -y
       - run: nimble test
