--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,7 @@ jobs:
         id: install_nim
         uses: iffy/install-nim@v4
         with:
-          version: "#version-2-0"
-      # - run: choosenim update -n "#version-2-0"
+          version: devel
       - run: git submodule update --recursive --init
       - run: nimble install -y
       - run: nimble test
