--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,11 +16,14 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
-      - name: "install_nim"
-        id: install_nim
-        uses: iffy/install-nim@v4
+      - uses: jiro4989/setup-nim-action@v1
         with:
-          version: devel
+          nim-version: 'devel'
+      # - name: "install_nim"
+      #   id: install_nim
+      #   uses: iffy/install-nim@v4
+      #   with:
+      #     version: devel
       - run: git submodule update --recursive --init
       - run: nimble install -y
       - run: nimble test
