--- a/flambeau/install/torch_installer.nim.cfg
+++ b/flambeau/install/torch_installer.nim.cfg
@@ -1,1 +1,11 @@
 -d:ssl
+
+# Library paths for Homebrew on macOS
+@if macosx:
+  # Apple Silicon (ARM)
+  --passL:"-L/opt/homebrew/lib"
+  --passL:"-Wl,-rpath,/opt/homebrew/lib"
+  # Intel
+  --passL:"-L/usr/local/lib"
+  --passL:"-Wl,-rpath,/usr/local/lib"
+@end
